[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/juan_alpaca/basic_platform_character.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/juan_alpaca/juan_alpaca.gd" type="Script" id=2]
[ext_resource path="res://actors/cutout_character/alpaca/cutout_character.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/enemies/bugs.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/juan_alpaca/1_jump.ogg" type="AudioStream" id=5]
[ext_resource path="res://interface/menu_bar_hilit.tres" type="Theme" id=6]
[ext_resource path="res://actors/fighting_actors/player_fighting_character.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 24 )

[node name="platform_character" instance=ExtResource( 1 )]
collision_mask = 0
script = ExtResource( 2 )
walk_speed = 400
jump_height = 1000

[node name="shape" parent="." index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="cutout_character" parent="." index="1" instance=ExtResource( 3 )]

[node name="bugs" parent="." index="2" instance=ExtResource( 4 )]

[node name="sfx" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 5 )
bus = "player"

[node name="camera_rig" type="RemoteTransform2D" parent="." index="4"]

[node name="debug" type="Label" parent="." index="5"]
visible = false
margin_left = -32.0
margin_top = -144.0
margin_right = 35.0
margin_bottom = -122.0
theme = ExtResource( 6 )
text = "debug!!"

[node name="player_fighter" parent="." index="6" instance=ExtResource( 7 )]

[node name="interact_area" type="Area2D" parent="." index="7" groups=[
"player",
]]
position = Vector2( 0, -48 )

[node name="shape" type="CollisionShape2D" parent="interact_area" index="0"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )
[connection signal="state_changed" from="." to="." method="_on_state_changed"]
[connection signal="new_child" from="bugs" to="." method="_on_bugs_new_child"]
[connection signal="area_shape_entered" from="player_fighter" to="." method="_on_fighter_area_shape_entered"]
